<resources>
    <string name="app_name">PushDemo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="UI_button_Send_Puid">Show Notification</string>
    <string name="UI_Menu_main">Main Menu</string>
    <string name="UI_button_OpenSQLMain">Start SQLLite Main</string>
    <string name="UI_Txt_PushHeader_Default">New Course for you.</string>
    <string name="UI_Txt_PushDesc_Default">Data Analytics Introductions</string>
    <string name="UI_Label_Title">Notification Title</string>
    <string name="UI_Label_Desc">Notification Description</string>
    <string name="UI_Label_App_Desc">This app, add a notification into your notification drawer
            enter in title, description and click on button below</string>



    <!--contacts demo-->

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
